k8s/apps/seerr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: seerr
spec:
  selector:
    app: seerr
  ports:
    - name: http
      port: 5055
      targetPort: 5055
  type: ClusterIP
